# Project-Artetra

./: .gitignore
Project-Artetra/: Board.cpp  Board.h  main.cpp
artetra/: CMakeLists.txt  artetra.cpp  board.cpp  board.h  board_insertion_sorter.cpp  board_insertion_sorter.h  max_heap_board.cpp  max_heap_board.h  max_heap_board_move.cpp  max_heap_board_move.h  move_insertion_sorter.cpp  move_insertion_sorter.h
playground/: playground.py
